[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"
homepage = "https://github.com/mansanlab/ionbreak"
repository = "https://github.com/mansanlab/ionbreak"
authors = ["Edgar Manriquez-Sandoval", "Daniel Bailey"]

[workspace.dependencies]
ionbreak-isotopes = { version = "0.1.2", path = "crates/ionbreak-isotopes" }
ionbreak-spectrum = { version = "0.1.0", path = "crates/ionbreak-spectrum" }